// LiteMQ NameServer gRPC Service Definition

syntax = "proto3";

package litemq.nameserver;
option go_package = "litemq/api/proto";

// NameServer服务
service NameServerService {
  // 注册Broker
  rpc RegisterBroker (RegisterBrokerRequest) returns (RegisterBrokerResponse);

  // 注销Broker
  rpc UnregisterBroker (UnregisterBrokerRequest) returns (UnregisterBrokerResponse);

  // 获取路由信息
  rpc GetRouteInfo (GetRouteInfoRequest) returns (GetRouteInfoResponse);

  // 获取所有Broker
  rpc GetAllBrokers (GetAllBrokersRequest) returns (GetAllBrokersResponse);

  // 心跳
  rpc Heartbeat (BrokerHeartbeatRequest) returns (BrokerHeartbeatResponse);
}

// 注册Broker请求
message RegisterBrokerRequest {
  string broker_id = 1;
  string broker_name = 2;
  string broker_addr = 3;
  string cluster_name = 4;
  string role = 5; // master, slave
  map<string, QueueIds> topics = 6;
}

// 队列ID列表
message QueueIds {
  repeated int32 queue_ids = 1;
}

// 注册Broker响应
message RegisterBrokerResponse {
  bool success = 1;
  string error = 2;
}

// 注销Broker请求
message UnregisterBrokerRequest {
  string broker_id = 1;
}

// 注销Broker响应
message UnregisterBrokerResponse {
  bool success = 1;
  string error = 2;
}

// 获取路由信息请求
message GetRouteInfoRequest {
  string topic = 1;
}

// 获取路由信息响应
message GetRouteInfoResponse {
  TopicRouteInfo route_info = 1;
  string error = 2;
}

// 主题路由信息
message TopicRouteInfo {
  string topic_name = 1;
  int32 queue_count = 2;
  repeated string broker_addrs = 3;
}

// 获取所有Broker请求
message GetAllBrokersRequest {
  // 空请求
}

// 获取所有Broker响应
message GetAllBrokersResponse {
  repeated BrokerInfo brokers = 1;
  string error = 2;
}

// Broker信息
message BrokerInfo {
  string broker_id = 1;
  string broker_name = 2;
  string broker_addr = 3;
  string cluster_name = 4;
  string role = 5;
  int64 last_update = 6;
  map<string, QueueIds> topics = 7;
}

// Broker心跳请求
message BrokerHeartbeatRequest {
  string broker_id = 1;
}

// Broker心跳响应
message BrokerHeartbeatResponse {
  bool success = 1;
  string error = 2;
}
